# jadipa

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-please-config.json  release-plz.toml
.github/workflows/: build_native_binaries.yaml  build_nuget_package.yaml  release.yaml  test.yaml
bindings/dotnet/Jadipa/: .gitignore  Jadipa.csproj  README.md
bindings/dotnet/Jadipa.Tests/: DiffTests.cs  Jadipa.Tests.csproj  MergePatchTests.cs  PatchTests.cs  nuget.config
crates/core/: Cargo.toml  README.md
crates/core/examples/: diff.rs  merge_patch.rs  patches.rs
crates/core/src/: lib.rs
crates/core/src/diff/: mod.rs
crates/core/src/merge_patch/: mod.rs
crates/core/src/patch/: mod.rs  patch.rs
crates/core/tests/: diff.rs  merge_patch_apply.rs  patch_apply.rs
crates/ffi/: Cargo.toml  boltffi.toml  justfile
crates/ffi/src/: lib.rs
crates/ffi/tests/: diff.rs  merge_patch_apply.rs  patch_apply.rs
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/patch/: mod.rs  operations.rs
rust/src/pointer/: mod.rs
