[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"
authors = ["Christoph Bühler <crates.io.victory634@passmail.net>"]
repository = "https://github.com/buehler/jadipa"
keywords = ["JSON", "Patch", "Pointer", "RFC-6902", "RFC-7396"]
categories = []
