[package]
name = "jadipa"
description = "A Rust library for JSON utils like creating and applying JSON Patches (RFC 6902) and JSON Merge Patches (RFC 7396)."
readme = "README.md"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["patch", "diff"]

## Enables JSON Patch (RFC 6902)
patch = []

## Feature that allows comparing two JSON objects and create a diff in the form of a JSON Patch.
diff = ["patch"]

## Enables JSON Merge Patch (RFC 7396)
merge_patch = []

[package.metadata.docs.rs]
all-features = true

[dependencies]
document-features = { version = "0.2.8", optional = true }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"

[dev-dependencies]
yare = "3.0.0"

[[example]]
name = "patches"
required-features = ["patch"]

[[example]]
name = "merge_patch"
required-features = ["merge_patch"]

[[example]]
name = "diff"
required-features = ["diff"]
